--- a/temp.ipynb
+++ b/temp.ipynb
@@ -24,14 +24,14 @@
  "cells": [
   {
    "source": [
-    "## This is a notebook used for learning the codebase"
+    "# This is a notebook for learning the codebase"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,8 +44,167 @@
    ]
   },
   {
+   "source": [
+    "## Dataset\n",
+    "- Rihkye tasks"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RihkyeTask():\n",
+    "    def __init__(self, Ntrain, Nextra, Ncontexts, inpsPerConext, blockTrain):\n",
+    "        self.Ncontexts = Ncontexts\n",
+    "        self.blockTrain = blockTrain\n",
+    "        self.inpsPerConext = inpsPerConext\n",
+    "        self.tsteps = 200\n",
+    "        self.cuesteps = 100\n",
+    "        self.Ncues = self.Ncontexts * self.inpsPerConext\n",
+    "\n",
+    "        if self.blockTrain:\n",
+    "            self.Nextra = Nextra            # add cycles to show if block1\n",
+    "            # learning is remembered\n",
+    "            Ntrain = Ntrain*self.Ncontexts + self.Nextra\n",
+    "        else:\n",
+    "            Ntrain *= self.Ncontexts\n",
+    "\n",
+    "        self.Ntrain = Ntrain\n",
+    "\n",
+    "        # Initialize counter\n",
+    "        self.traini = 0\n",
+    "\n",
+    "    def __call__(self, *args, **kwargs):\n",
+    "        \"\"\"Return the input stimulus and target output for one cycle.\n",
+    "\n",
+    "        Returns:\n",
+    "            input: (n_time, n_input)\n",
+    "            target: (n_time, n_output)\n",
+    "        \"\"\"\n",
+    "        # if blockTrain,\n",
+    "        #  first half of trials is context1, second half is context2\n",
+    "        if self.blockTrain:\n",
+    "            n_switch = (self.Ntrain - self.Nextra) // self.Ncontexts\n",
+    "            taski = self.traini // (n_switch)\n",
+    "            # last block is just the first context again\n",
+    "            if self.traini >= self.Ntrain - self.Nextra:\n",
+    "                taski = 0\n",
+    "            cueList = self.get_cue_list(taski)\n",
+    "        else:\n",
+    "            cueList = self.get_cue_list()\n",
+    "        cues_order = self.get_cues_order(cueList)\n",
+    "        num_trial = cues_order.shape[0]\n",
+    "\n",
+    "        inputs = np.zeros((self.tsteps * num_trial, self.Ncues))\n",
+    "        targets = np.zeros((self.tsteps * num_trial, 2))\n",
+    "        t_start = 0\n",
+    "        for taski, cuei in cues_order:\n",
+    "            cue, target = self.get_cue_target(taski, cuei)\n",
+    "            inputs[t_start:t_start+self.cuesteps] = cue\n",
+    "            targets[t_start:t_start+self.tsteps] = target\n",
+    "            t_start += self.tsteps\n",
+    "\n",
+    "        self.traini += 1\n",
+    "\n",
+    "        return inputs, targets\n",
+    "\n",
+    "    # Helper functions to generate dataset\n",
+    "    def get_cues_order(self, cues):\n",
+    "        cues_order = np.random.permutation(cues)\n",
+    "        return cues_order\n",
+    "\n",
+    "    def get_cue_target(self, taski, cuei):\n",
+    "        cue = np.zeros(self.Ncues)\n",
+    "        inpBase = taski * 2\n",
+    "        if cuei in (0, 1):\n",
+    "            cue[inpBase + cuei] = 1.\n",
+    "        elif cuei == 3:\n",
+    "            cue[inpBase:inpBase + 2] = 1\n",
+    "\n",
+    "        if cuei == 0:\n",
+    "            target = np.array((1., 0.))\n",
+    "        else:\n",
+    "            target = np.array((0., 1.))\n",
+    "        return cue, target\n",
+    "\n",
+    "    def get_cue_list(self, taski=None):\n",
+    "        if taski is not None:\n",
+    "            # (taski,cuei) combinations for one given taski\n",
+    "            cueList = np.dstack(( np.repeat(taski,self.inpsPerConext),\n",
+    "                                    np.arange(self.inpsPerConext) ))\n",
+    "        else:\n",
+    "            # every possible (taski,cuei) combination\n",
+    "            cueList = np.dstack(( np.repeat(np.arange(self.Ncontexts),self.inpsPerConext),\n",
+    "                                    np.tile(np.arange(self.inpsPerConext),self.Ncontexts) ))\n",
+    "        return cueList[0]"
+   ]
+  },
+  {
+   "source": [
+    "Check the dataset"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RNGSEED = 5\n",
+    "np.random.seed([RNGSEED])\n",
+    "\n",
+    "Ntrain = 500             # number of training cycles for each context\n",
+    "Nextra = 200            # add cycles to show if block1\n",
+    "Ncontexts = 2\n",
+    "inpsPerConext = 2\n",
+    "dataset = RihkyeTask(Ntrain=Ntrain, Nextra = Nextra, Ncontexts=Ncontexts, inpsPerConext = inpsPerConext, blockTrain=True)\n",
+    "\n",
+    "input, target = dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(2, 2)\n[[0 0]\n [0 1]]\n[1. 0. 0. 0.]\n[1. 0.]\n(400, 4) (2,)\n[[1. 0. 0. 0.]\n [1. 0. 0. 0.]\n [1. 0. 0. 0.]\n ...\n [0. 0. 0. 0.]\n [0. 0. 0. 0.]\n [0. 0. 0. 0.]] [1. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cueList = dataset.get_cue_list(taski=0)\n",
+    "cues_order = dataset.get_cues_order(cueList)\n",
+    "print(cues_order.shape)\n",
+    "print(cues_order)\n",
+    "\n",
+    "cue, target = dataset.get_cue_target(taski=0, cuei=0)\n",
+    "print(cue)\n",
+    "print(target)\n",
+    "\n",
+    "print(input.shape, target.shape)\n",
+    "print(input, target)"
+   ]
+  },
+  {
+   "source": [
+    "## Model"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +224,7 @@
     "            lowcue, highcue = -1., 1\n",
     "        for cuei in np.arange(self.Ncues):\n",
     "            self.wIn[self.Nsub * cuei:self.Nsub * (cuei + 1), cuei] = \\\n",
-    "                np.random.uniform(lowcue, highcue, size=self.Nsub) \\\n",
-    "                * self.cueFactor\n",
+    "                np.random.uniform(lowcue, highcue, size=self.Nsub) * self.cueFactor\n",
     "\n",
     "        self._use_torch = False\n",
     "\n",
@@ -113,8 +271,7 @@
     "        self.activity = self.activation(self.xinp)\n",
     "\n",
     "    def init_weights(self):\n",
-    "        self.Jrec = np.random.normal(size=(self.Nneur, self.Nneur)) \\\n",
-    "                    * self.G / np.sqrt(self.Nsub * 2)\n",
+    "        self.Jrec = np.random.normal(size=(self.Nneur, self.Nneur)) * (self.G / np.sqrt(self.Nsub * 2))\n",
     "        # make mean input to each row zero,\n",
     "        #  helps to avoid saturation (both sides) for positive-only rates.\n",
     "        #  see Nicola & Clopath 2016\n",
@@ -229,10 +386,8 @@
     "        # MD presynaptic traces filtered over 10 trials\n",
     "        # Ideally one should weight them with MD syn weights,\n",
     "        #  but syn plasticity just uses pre!\n",
-    "        self.MDpreTrace += 1. / self.tsteps / 5. * \\\n",
-    "                           (-self.MDpreTrace + rout)\n",
-    "        self.MDpostTrace += 1. / self.tsteps / 5. * \\\n",
-    "                            (-self.MDpostTrace + MDout)\n",
+    "        self.MDpreTrace += 1. / self.tsteps / 5. * (-self.MDpreTrace + rout)\n",
+    "        self.MDpostTrace += 1. / self.tsteps / 5. * (-self.MDpostTrace + MDout)\n",
     "        # MDoutTrace =  self.MDpostTrace\n",
     "\n",
     "        MDoutTrace = self.winner_take_all(self.MDpostTrace)\n",
@@ -312,26 +467,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "class FullNetwork():\n",
-    "    def __init__(self, Num_PFC, n_neuron_per_cue, Num_MD, num_active,\n",
-    "                 MDeffect=True):\n",
+    "    def __init__(self, Num_PFC, n_neuron_per_cue, Num_MD, num_active, MDeffect=True):\n",
     "        dt = 0.001\n",
-    "        self.pfc = PFC(Num_PFC, n_neuron_per_cue)\n",
     "        self.sensory2pfc = SensoryInputLayer(n_sub=n_neuron_per_cue, n_cues=4, n_output=Num_PFC)\n",
+    "        self.pfc = PFC(Num_PFC, n_neuron_per_cue)\n",
     "        self.pfc2out = OutputLayer(n_input=Num_PFC, n_out=2, dt=dt)\n",
     "        self.pfc_output_t = np.array([])\n",
     "        \n",
     "        self.MDeffect = MDeffect\n",
     "        if self.MDeffect:\n",
-    "            self.md = MD(Nneur=Num_PFC, Num_MD=Num_MD, num_active=num_active,\n",
-    "                         dt=dt)\n",
+    "            self.md = MD(Nneur=Num_PFC, Num_MD=Num_MD, num_active=num_active, dt=dt)\n",
+    "\n",
     "            self.md_output = np.zeros(Num_MD)\n",
     "            index = np.random.permutation(Num_MD)\n",
-    "            self.md_output[index[:num_active]] = 1 # randomly set part of md_output to 1\n",
+    "            self.md_output[index[:num_active]] = 1 # randomly set num_active indices of md_output to 1\n",
     "            self.md_output_t = np.array([])\n",
     "\n",
     "    def __call__(self, input, target, *args, **kwargs):\n",
@@ -359,7 +513,7 @@
     "            input_t = input[i]\n",
     "            target_t = target[i]\n",
     "            \n",
-    "            if i % tsteps == 0: # Reinit activity for every trial\n",
+    "            if i % tsteps == 0: # Reinit activity for every trial (timestep)\n",
     "                self.pfc.init_activity()  # Reinit PFC activity\n",
     "                pfc_output = self.pfc.activity\n",
     "                if self.MDeffect:\n",
@@ -380,7 +534,6 @@
     "                    self.pfc_output_t = pfc_output.reshape((1,pfc_output.shape[0]))\n",
     "                    self.md_output_t = self.md_output.reshape((1,self.md_output.shape[0]))\n",
     "                else:\n",
-    "                    #import pdb;pdb.set_trace() \n",
     "                    self.pfc_output_t = np.concatenate((self.pfc_output_t, pfc_output.reshape((1,pfc_output.shape[0]))),axis=0)\n",
     "                    self.md_output_t = np.concatenate((self.md_output_t, self.md_output.reshape((1,self.md_output.shape[0]))),axis=0)\n",
     "            \n",
@@ -402,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,8 +588,7 @@
     "        self.activity = self.activation(self.xinp)\n",
     "\n",
     "    def init_weights(self):\n",
-    "        self.Jrec = torch.normal(mean=0, std=self.G / np.sqrt(self.Nsub * 2)*2,\n",
-    "                                 size=(self.Nneur, self.Nneur))\n",
+    "        self.Jrec = torch.normal(mean=0, std=self.G / np.sqrt(self.Nsub * 2)*2, size=(self.Nneur, self.Nneur))\n",
     "        # make mean input to each row zero,\n",
     "        #  helps to avoid saturation (both sides) for positive-only rates.\n",
     "        #  see Nicola & Clopath 2016\n",
@@ -454,8 +606,7 @@
     "\n",
     "        Args:\n",
     "            input: array (n_neuron,)\n",
-    "            input_x: array (n_neuron,), modulatory input that multiplicatively\n",
-    "                interact with the neurons\n",
+    "            input_x: array (n_neuron,), modulatory input that multiplicatively interact with the neurons\n",
     "\n",
     "        Returns:\n",
     "            output: array (n_output,)\n",
@@ -470,6 +621,86 @@
     "        self.activity = rout\n",
     "        return rout"
    ]
+  },
+  {
+   "source": [
+    "## Training"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RNGSEED = 5 # set random seed\n",
+    "np.random.seed([RNGSEED])\n",
+    "\n",
+    "Ntrain = 500            # number of training cycles for each context\n",
+    "Nextra = 200            # add cycles to show if block1\n",
+    "Ncontexts = 2           # number of cueing contexts (e.g. auditory cueing context)\n",
+    "inpsPerConext = 2       # in a cueing context, there are <inpsPerConext> kinds of stimuli\n",
+    "                         # (e.g. auditory cueing context contains high-pass noise and low-pass noise)\n",
+    "\n",
+    "# generate trainset\n",
+    "dataset = RihkyeTask(Ntrain=Ntrain, Nextra=Nextra, Ncontexts=Ncontexts, inpsPerConext=inpsPerConext, blockTrain=True)\n",
+    "\n",
+    "# model parameters\n",
+    "n_neuron = 1000\n",
+    "n_neuron_per_cue = 200\n",
+    "Num_MD = 10\n",
+    "num_active = 5  # num MD active per context\n",
+    "n_output = 2\n",
+    "MDeffect = True\n",
+    "\n",
+    "model = FullNetwork(n_neuron, n_neuron_per_cue, Num_MD, num_active, MDeffect=MDeffect)"
+   ]
+  },
+  {
+   "source": [
+    "import pickle\n",
+    "from collections import defaultdict\n",
+    "from pathlib import Path\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "log = defaultdict(list)\n",
+    "\n",
+    "num_cycle_train = Ntrain*Ncontexts+Nextra\n",
+    "mses = list()\n",
+    "MDpreTraces = np.zeros(shape=(num_cycle_train,n_neuron))\n",
+    "MDouts_all = np.zeros(shape=(num_cycle_train,Num_MD))\n",
+    "\n",
+    "for i in tqdm(range(num_cycle_train)):\n",
+    "    #print('training'+str(i))\n",
+    "    input, target = dataset()\n",
+    "    output = model(input, target)\n",
+    "    mse = np.mean((output - target)**2)*Ncontexts # one cycle has Ncontexts\n",
+    "#    mse = np.mean((output[:200] - target[:200])**2)\n",
+    "#    mse += np.mean((output[200:] - target[200:])**2)\n",
+    "    log['mse'].append(mse)\n",
+    "    if  MDeffect == True:\n",
+    "        MDouts_all[i,:] = model.md_output\n",
+    "        MDpreTraces[i,:] = model.md.MDpreTrace\n",
+    "\n",
+    "# write MD weights\n",
+    "if  MDeffect == True:  \n",
+    "    log['wPFC2MD'] = model.md.wPFC2MD\n",
+    "    log['wMD2PFC'] = model.md.wMD2PFC\n",
+    "    log['wMD2PFCMult'] = model.md.wMD2PFCMult\n",
+    "\n",
+    "# write model\n",
+    "filename = Path('files')\n",
+    "os.makedirs(filename, exist_ok=True)\n",
+    "file_training = 'train_numMD'+str(Num_MD)+'_numContext'+str(Ncontexts)+'_MD'+str(MDeffect)+'_R'+str(RNGSEED)+'.pkl'\n",
+    "with open(filename / file_training, 'wb') as f:\n",
+    "    pickle.dump(log, f)"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   }
  ]
 }
