--- a/temp.ipynb
+++ b/temp.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,12 +244,12 @@
     "\n",
     "\n",
     "class PFC():\n",
-    "    def __init__(self, n_neuron, n_neuron_per_cue, positiveRates=True):\n",
+    "    def __init__(self, n_neuron, n_neuron_per_cue, positiveRates=True, MDeffect=True):\n",
     "        self.Nneur = n_neuron\n",
     "        self.Nsub = n_neuron_per_cue\n",
     "        self.useMult = True\n",
     "        self.noisePresent = False\n",
-    "        self.noiseSD = 1e-1#1e-3\n",
+    "        self.noiseSD = 1e-3#1e-3\n",
     "        self.tau = 0.02\n",
     "        self.dt = 0.001\n",
     "                    \n",
@@ -262,6 +262,10 @@
     "            self.activation = lambda inp: np.tanh(inp)\n",
     "\n",
     "        self.G = 0.75  # determines also the cross-task recurrence\n",
+    "        # With MDeffect = True and MDstrength = 0, i.e. MD inactivated\n",
+    "        #  PFC recurrence is (1+PFC_G_off)*Gbase = (1+1.5)*0.75 = 1.875\n",
+    "        # So with MDeffect = False, ensure the same PFC recurrence for the pure reservoir\n",
+    "        if not MDeffect: self.G = 1.875\n",
     "\n",
     "        self.init_activity()\n",
     "        self.init_weights()\n",
@@ -271,7 +275,7 @@
     "        self.activity = self.activation(self.xinp)\n",
     "\n",
     "    def init_weights(self):\n",
-    "        self.Jrec = np.random.normal(size=(self.Nneur, self.Nneur)) * (self.G / np.sqrt(self.Nsub * 2))\n",
+    "        self.Jrec = np.random.normal(size=(self.Nneur, self.Nneur)) * self.G / np.sqrt(self.Nsub * 2)\n",
     "        # make mean input to each row zero,\n",
     "        #  helps to avoid saturation (both sides) for positive-only rates.\n",
     "        #  see Nicola & Clopath 2016\n",
@@ -305,14 +309,12 @@
     "        self.xinp += self.dt / self.tau * (-self.xinp + xadd)\n",
     "\n",
     "        if self.noisePresent:\n",
-    "            self.xinp += np.random.normal(size=(self.Nneur)) * self.noiseSD \\\n",
-    "                    * np.sqrt(self.dt) / self.tau\n",
+    "            self.xinp += np.random.normal(size=(self.Nneur)) * self.noiseSD * np.sqrt(self.dt) / self.tau\n",
     "\n",
     "        rout = self.activation(self.xinp)\n",
     "        self.activity = rout\n",
     "        return rout\n",
     "\n",
-    "    # TODO: is this a bug?\n",
     "    def update_weights(self, input, activity, output):\n",
     "        self.trace = self.trace + activity\n",
     "        w_input = self.w_input + input * self.trace\n",
@@ -459,15 +461,13 @@
     "    def update_weights(self, input, output, target):\n",
     "        \"\"\"error-driven i.e. error*pre (perceptron like) learning\"\"\"\n",
     "        error = output - target\n",
-    "        self.error_smooth += self.dt / self.tauError * (-self.error_smooth +\n",
-    "                                                        error)\n",
-    "        self.wOut += -self.learning_rate \\\n",
-    "                     * np.outer(self.error_smooth, input)"
+    "        self.error_smooth += self.dt / self.tauError * (-self.error_smooth + error)\n",
+    "        self.wOut += -self.learning_rate * np.outer(self.error_smooth, input)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
     "    def __init__(self, Num_PFC, n_neuron_per_cue, Num_MD, num_active, MDeffect=True):\n",
     "        dt = 0.001\n",
     "        self.sensory2pfc = SensoryInputLayer(n_sub=n_neuron_per_cue, n_cues=4, n_output=Num_PFC)\n",
-    "        self.pfc = PFC(Num_PFC, n_neuron_per_cue)\n",
+    "        self.pfc = PFC(Num_PFC, n_neuron_per_cue, MDeffect=MDeffect)\n",
     "        self.pfc2out = OutputLayer(n_input=Num_PFC, n_out=2, dt=dt)\n",
     "        self.pfc_output_t = np.array([])\n",
     "        \n",
@@ -513,7 +513,7 @@
     "            input_t = input[i]\n",
     "            target_t = target[i]\n",
     "            \n",
-    "            if i % tsteps == 0: # Reinit activity for every trial (timestep)\n",
+    "            if i % tsteps == 0: # Reinit activity for each trial\n",
     "                self.pfc.init_activity()  # Reinit PFC activity\n",
     "                pfc_output = self.pfc.activity\n",
     "                if self.MDeffect:\n",
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,14 +671,16 @@
     "mses = list()\n",
     "MDpreTraces = np.zeros(shape=(num_cycle_train,n_neuron))\n",
     "MDouts_all = np.zeros(shape=(num_cycle_train,Num_MD))\n",
+    "PFCouts_all = np.zeros(shape=(num_cycle_train,n_neuron))\n",
     "\n",
     "for i in tqdm(range(num_cycle_train)):\n",
-    "    #print('training'+str(i))\n",
     "    input, target = dataset()\n",
     "    output = model(input, target)\n",
     "    mse = np.mean((output - target)**2)*Ncontexts # one cycle has Ncontexts\n",
+    "\n",
     "#    mse = np.mean((output[:200] - target[:200])**2)\n",
     "#    mse += np.mean((output[200:] - target[200:])**2)\n",
+    "    PFCouts_all[i,:] = model.pfc.activity\n",
     "    log['mse'].append(mse)\n",
     "    if  MDeffect == True:\n",
     "        MDouts_all[i,:] = model.md_output\n",
@@ -699,8 +701,23 @@
    ],
    "cell_type": "code",
    "metadata": {},
+   "execution_count": 9,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "100%|██████████| 1200/1200 [27:49<00:00,  1.39s/it]\n"
+     ]
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "outputs": []
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
