--- a/temp.ipynb
+++ b/temp.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,147 +53,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "class RihkyeTask():\n",
-    "    def __init__(self, Ntrain, Nextra, Ncontexts, inpsPerConext, blockTrain):\n",
-    "        self.Ncontexts = Ncontexts\n",
-    "        self.blockTrain = blockTrain\n",
-    "        self.inpsPerConext = inpsPerConext\n",
-    "        self.tsteps = 200\n",
-    "        self.cuesteps = 100\n",
-    "        self.Ncues = self.Ncontexts * self.inpsPerConext\n",
+    "    def __init__(self, num_cueingcontext, num_cue, num_rule, rule, blocklen, block_cueingcontext, tsteps, cuesteps, batch_size):\n",
+    "        '''Generate Rihkye task dataset\n",
+    "        Parameters:\n",
+    "            num_cueingcontext: int, number of cueing contexts\n",
+    "            num_cue: int, number of cues in each cueing contexts\n",
+    "            num_rule: int, number of rules (e.g. attend to audition is a rule)\n",
+    "            rule: list of int, rule corresponding to one cue in one cueing context\n",
+    "            blocklen: list of int, trainlen of each block\n",
+    "            block_cueingcontext: list of int, cueing context trained in each block\n",
+    "            tsteps: int, length of a trial, equals to cuesteps + delaystep\n",
+    "            cuesteps: int, length of showing cues\n",
+    "            batch_size: int\n",
+    "        '''\n",
+    "        self.num_cueingcontext = num_cueingcontext\n",
+    "        self.num_cue = num_cue\n",
+    "        self.num_rule = num_rule\n",
+    "        self.rule = rule\n",
     "\n",
-    "        if self.blockTrain:\n",
-    "            self.Nextra = Nextra            # add cycles to show if block1\n",
-    "            # learning is remembered\n",
-    "            Ntrain = Ntrain*self.Ncontexts + self.Nextra\n",
-    "        else:\n",
-    "            Ntrain *= self.Ncontexts\n",
+    "        self.blockrange = np.zeros_like(blocklen) # index range of each block\n",
+    "        for i in range(len(blocklen)):\n",
+    "            self.blockrange[i] = sum(blocklen[:i+1])\n",
     "\n",
-    "        self.Ntrain = Ntrain\n",
+    "        self.block_cueingcontext = block_cueingcontext\n",
+    "        self.tsteps = tsteps\n",
+    "        self.cuesteps = cuesteps\n",
+    "        self.batch_size = batch_size\n",
     "\n",
     "        # Initialize counter\n",
     "        self.traini = 0\n",
     "\n",
     "    def __call__(self, *args, **kwargs):\n",
     "        \"\"\"Return the input stimulus and target output for one cycle.\n",
+    "        Parameters:\n",
+    "            No parameter\n",
     "\n",
     "        Returns:\n",
     "            input: (n_time, n_input)\n",
     "            target: (n_time, n_output)\n",
     "        \"\"\"\n",
-    "        # if blockTrain,\n",
-    "        #  first half of trials is context1, second half is context2\n",
-    "        if self.blockTrain:\n",
-    "            n_switch = (self.Ntrain - self.Nextra) // self.Ncontexts\n",
-    "            taski = self.traini // (n_switch)\n",
-    "            # last block is just the first context again\n",
-    "            if self.traini >= self.Ntrain - self.Nextra:\n",
-    "                taski = 0\n",
-    "            cueList = self.get_cue_list(taski)\n",
-    "        else:\n",
-    "            cueList = self.get_cue_list()\n",
-    "        cues_order = self.get_cues_order(cueList)\n",
-    "        num_trial = cues_order.shape[0]\n",
     "\n",
-    "        inputs = np.zeros((self.tsteps * num_trial, self.Ncues))\n",
-    "        targets = np.zeros((self.tsteps * num_trial, 2))\n",
-    "        t_start = 0\n",
-    "        for taski, cuei in cues_order:\n",
-    "            cue, target = self.get_cue_target(taski, cuei)\n",
-    "            inputs[t_start:t_start+self.cuesteps] = cue\n",
-    "            targets[t_start:t_start+self.tsteps] = target\n",
-    "            t_start += self.tsteps\n",
+    "        inputs = np.zeros((self.tsteps * self.num_cue, self.batch_size, self.num_cue*self.num_cueingcontext))\n",
+    "        targets = np.zeros((self.tsteps * self.num_cue, self.batch_size, self.num_rule))\n",
     "\n",
-    "        self.traini += 1\n",
+    "        for i in range(self.batch_size):\n",
+    "            blocki = np.argwhere(self.traini / self.blockrange < 1.0)\n",
+    "            if len(blocki) == 0:\n",
+    "                raise ValueError(\"the end\")\n",
+    "            blocki = int(blocki[0])\n",
+    "            cueingcontext = block_cueingcontext[blocki]\n",
+    "\n",
+    "            cueList = self.get_cue_list(cueingcontext)\n",
+    "\n",
+    "            cues_order = np.random.permutation(cueList)\n",
+    "\n",
+    "\n",
+    "            t_start = 0\n",
+    "            for cueingcontext, cuei in cues_order:\n",
+    "                cue, target = self.get_cue_target(cueingcontext, cuei)\n",
+    "                inputs[t_start:t_start+self.cuesteps, i, :] = cue\n",
+    "                targets[t_start:t_start+self.tsteps, i, :] = target\n",
+    "                t_start += self.tsteps\n",
+    "\n",
+    "            self.traini += 1\n",
     "\n",
     "        return inputs, targets\n",
     "\n",
-    "    # Helper functions to generate dataset\n",
-    "    def get_cues_order(self, cues):\n",
-    "        cues_order = np.random.permutation(cues)\n",
-    "        return cues_order\n",
+    "    # Helper functions\n",
+    "    def get_cue_list(self, cueingcontext):\n",
+    "        '''\n",
+    "        Return:\n",
+    "        (cueingcontext, cuei) combinations for one training step\n",
+    "        '''\n",
+    "        cueList = np.dstack(( np.repeat(cueingcontext,self.num_cue), \n",
+    "                                np.arange(self.num_cue) ))\n",
     "\n",
-    "    def get_cue_target(self, taski, cuei):\n",
-    "        cue = np.zeros(self.Ncues)\n",
-    "        inpBase = taski * 2\n",
-    "        if cuei in (0, 1):\n",
-    "            cue[inpBase + cuei] = 1.\n",
-    "        elif cuei == 3:\n",
-    "            cue[inpBase:inpBase + 2] = 1\n",
+    "        return cueList[0]\n",
     "\n",
-    "        if cuei == 0:\n",
-    "            target = np.array((1., 0.))\n",
-    "        else:\n",
-    "            target = np.array((0., 1.))\n",
-    "        return cue, target\n",
+    "    def get_cue_target(self, cueingcontext, cuei):\n",
+    "        cue = np.zeros(self.num_cue*self.num_cueingcontext)\n",
+    "        cue[cueingcontext*self.num_cue + cuei] = 1.\n",
     "\n",
-    "    def get_cue_list(self, taski=None):\n",
-    "        if taski is not None:\n",
-    "            # (taski,cuei) combinations for one given taski\n",
-    "            cueList = np.dstack(( np.repeat(taski,self.inpsPerConext),\n",
-    "                                    np.arange(self.inpsPerConext) ))\n",
-    "        else:\n",
-    "            # every possible (taski,cuei) combination\n",
-    "            cueList = np.dstack(( np.repeat(np.arange(self.Ncontexts),self.inpsPerConext),\n",
-    "                                    np.tile(np.arange(self.inpsPerConext),self.Ncontexts) ))\n",
-    "        return cueList[0]"
-   ]
-  },
-  {
-   "source": [
-    "Check the dataset"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RNGSEED = 5\n",
-    "np.random.seed([RNGSEED])\n",
+    "        target = np.zeros(self.num_rule)\n",
+    "        target[self.rule[cueingcontext*self.num_cue + cuei]] = 1\n",
     "\n",
-    "Ntrain = 500             # number of training cycles for each context\n",
-    "Nextra = 200            # add cycles to show if block1\n",
-    "Ncontexts = 2\n",
-    "inpsPerConext = 2\n",
-    "dataset = RihkyeTask(Ntrain=Ntrain, Nextra = Nextra, Ncontexts=Ncontexts, inpsPerConext = inpsPerConext, blockTrain=True)\n",
-    "\n",
-    "input, target = dataset()"
+    "        return cue, target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(2, 2)\n[[0 0]\n [0 1]]\n[1. 0. 0. 0.]\n[1. 0.]\n(400, 4) (2,)\n[[1. 0. 0. 0.]\n [1. 0. 0. 0.]\n [1. 0. 0. 0.]\n ...\n [0. 0. 0. 0.]\n [0. 0. 0. 0.]\n [0. 0. 0. 0.]] [1. 0.]\n"
+      "(400, 10, 4) (400, 10, 2) \n\n"
      ]
     }
    ],
    "source": [
-    "cueList = dataset.get_cue_list(taski=0)\n",
-    "cues_order = dataset.get_cues_order(cueList)\n",
-    "print(cues_order.shape)\n",
-    "print(cues_order)\n",
+    "RNGSEED = 5\n",
+    "np.random.seed([RNGSEED])\n",
     "\n",
-    "cue, target = dataset.get_cue_target(taski=0, cuei=0)\n",
-    "print(cue)\n",
-    "print(target)\n",
+    "num_cueingcontext = 2\n",
+    "num_cue = 2\n",
+    "num_rule = 2\n",
+    "rule = [0, 1, 0, 1]\n",
+    "blocklen = [500, 500, 200]\n",
+    "block_cueingcontext = [0, 1, 0]\n",
+    "tsteps = 200\n",
+    "cuesteps = 100\n",
+    "batch_size = 10\n",
     "\n",
-    "print(input.shape, target.shape)\n",
-    "print(input, target)"
+    "dataset = RihkyeTask(num_cueingcontext=num_cueingcontext, num_cue=num_cue, num_rule=num_rule, rule=rule, blocklen=blocklen, block_cueingcontext=block_cueingcontext, tsteps=tsteps, cuesteps=cuesteps, batch_size=batch_size)\n",
+    "\n",
+    "input, target = dataset()\n",
+    "print(input.shape, target.shape, '\\n')\n",
+    "#print(input)\n",
+    "#print(target)"
    ]
+  },
+  {
+   "source": [
+    "- cue, target = dataset.get_cue_target(taski=0, cuei=0) cue should be \\[1, -1, 0, 0\\]?\n",
+    "- do use one-hot coding in targets\n",
+    "- in a training step, we select one cueing context (e.g. noise context), then we give two trials, high-pass noise and low-pass noise, in a random sequence. 500 training steps like this consist of a training block. In the next training block, we will select another cueing context.\n",
+    "- batch size?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
