test RikhyeTaskBatch dataset

--- a/deprecated/Elman.ipynb
+++ b/deprecated/Elman.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "\n",
     "sys.path.append('..')\n",
-    "from temp_task import RikhyeTaskBatch"
+    "from task import RikhyeTaskBatch"
    ]
   },
   {
