--- a/deprecated/LSTM_MD.ipynb
+++ b/deprecated/LSTM_MD.ipynb
@@ -21,8 +21,8 @@
     "\n",
     "import sys\n",
     "sys.path.append('..')\n",
-    "from temp_model import MD, LSTM_MD\n",
-    "from temp_task import RikhyeTaskBatch"
+    "from model import MD, LSTM_MD\n",
+    "from task import RikhyeTaskBatch"
    ]
   },
   {
