--- a/deprecated/train_pytorch_PFCMD.ipynb
+++ b/deprecated/train_pytorch_PFCMD.ipynb
@@ -655,8 +655,8 @@
     "root=os.getcwd()\n",
     "sys.path.append(root)\n",
     "sys.path.append('..')\n",
-    "from temp_task import RikhyeTask\n",
-    "from temp_model import TempNetwork\n",
+    "from task import RikhyeTask\n",
+    "from model import TempNetwork\n",
     "\n",
     "\n",
     "\n",
